--- a/demo2.html
+++ b/demo2.html
@@ -3,7 +3,8 @@
 
 <body style="margin: 0px; overflow: hidden">
   <a-scene embedded artoolkit='sourceType: webcam;'>
-    <a-box position='0 2 0' material='opacity:1.0;' color='#4CC3D9'></a-box>
+    <a-box position='2 1 2' material='opacity:1.0;' color='#4CC3D9'></a-box>
+    <a-sphere position='2 1 2' radius="1.25" material='opacity:1.0;' color='#EF2D5E'></a-sphere>
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
